--- a/public/locales/by/translation.json
+++ b/public/locales/by/translation.json
@@ -3,7 +3,7 @@
     "home": "Галоўная",
     "about": "Пра мяне",
     "skills": "Навыкі",
-    "portfolio": "Партфоліё",
+    "portfolio": "Партфоліа",
     "contacts": "Кантакты"
   },
   "main": {
@@ -12,64 +12,65 @@
       "about": "Фронтэнд-распрацоўка 26 гадоў, Мінск"
     },
     "about": {
-      "a": "Я навучаюся ў SF на курсе 'FrontEnd Pro'.",
-      "b": "У свабодны час водзім свой праект разам з камандай.",
-      "c": "Мне цікава стварэнне вэб-прыкладанняў з выкарыстаннем JavaScript/TypeScript і React.",
-      "d": "Я камунікатыўны, стрэмлюся да пастаяннага развіцця і адаптуцца да новых тэхналогій.",
-      "e": "Гатовы прымаць на сябе адказнасць і спрыяць развіццю праектаў і кампаній."
+      "a": "Я вучуся ў SF на курсе 'FrontEnd Pro'.",
+      "b": "У вольны час рэалізуем разам з камандай свой праект.",
+      "c": "Захапляюся стварэннем вэб-дададкаЎ з выкарыстаннем JavaScript/TypeScript і React.",
+      "d": "Я камунікатыўны, імкнуся да пастаяннага развіцця і адапціруюся да новых тэхналогій.",
+      "e": "Гатоў браць на сябе адказнасць і ўделінічаць у стварэнні праектаў для развіцця кампаній."
     },
     "portfolio": {
       "dataTable": {
         "name": "Табліца дадзеных(React)",
         "description": {
-          "a": "React і функцыянальныя кампаненты для чыстага і кампактнага коду.",
-          "b": "Вэрстка адпавядае макету, выкарыстанне стандартных правілаў SCSS і styled-components для стылізацыі.",
-          "c": "Кастамізацыя элементаў бібліятэкі Ant Design для стварэння зручнага інтэрфейсу.",
-          "d": "Магчымасць выбару паміж дзённай і ночнай тэмай праз useContext.",
+          "a": "React і функцыянальныя кампаненты для чыстага і кампактнага кода.",
+          "b": "Вёрстка адпавядае макету і выкарыстаны стандартныя правілы SCSS і styled-components для стылізацыі.",
+          "c": "Кастамізацыя элементаў бібліятэкі Ant Design для стварэння зручнага інтэрфейса.",
+          "d": "Магчымасць выбару паміж дзённай і начной тэмай праз useContext.",
           "e": "Праца з рознымі тыпамі дадзеных: тэкставымі, лікавымі, выпадальным спісам і чэкбоксамі з адпаведнымі кампанентамі.",
-          "f": "Складнасць заключалася ў рэалізацыі тэм (дзень/ноч). Рашыў з дапамогай styled-components, useState і useContext."
+          "f": "Складнасць заключалася ў рэалізацыі тэм (дзень/ноч). Праблема была вырашана з дапамогай styled-components, useState і useContext."
         }
       },
       "snake": {
         "name": "Змяя(Гульня)",
         "description": {
-          "a": "Выкарыстанне элемента <canvas> для стварэння гульнявага поля.",
-          "b": "HTML і CSS для асноўнай структуры і візуальнага ўпрыгожнення",
+          "a": "Выкарыстанне элемента <canvas> для стварэння гульнявога поля.",
+          "b": "HTML і CSS для асноўнай структуры і візуальнага ўпрыгожвання",
           "c": "JavaScript для кіравання логікай і візуалізацыяй гульні.",
-          "d": "Даданне функцыяналу, налада хуткасці змяйкі з дапамогай JavaScript",
-          "e": "Выкарыстанне лакальнага захоўвання браўзэра для захоўвання імя гульца і лепшага выніку",
-          "f": "Складанасць узнікла з кіраваннем жыццёвага цыклу гульні. Рашэнне было такое. Функцыя run() адказвае за пачатак гульні. Запускае таймер зваротнага адліку перад пачаткам гульні і вызывае функцыю gameLoop() пасля завяршэння зваротнага адліку. Функцыя gameLoop() асноўны гульнявы цыкл, які абнаўляе і адлюстроўвае гульнявыя элементы з пэўнай частатай. Выклікаецца пасля завяршэння таймера зваротнага адліку. Выкарыстоўвае requestAnimationFrame для паўторнага выкліку сябе і абнаўлення стану гульні. Апрацоўчыкі падзей клавіятуры рэагуюць на націск клавіш і змяняюць напрамак руху змяйкі."
+          "d": "Дабаулены функцыянал для наладжвання хуткасці змейкі з дапамогай JavaScript",
+          "e": "Лакальнага захоўвання выкарыстанна для запамінання імені гульца і лепшага выніку",
+          "f": "Складанасць узнікла з кіраваннем жыццёвага цыкла гульні. Рашэнне было наступнае: функцыя run() адказвае за пачатак гульні, запускае таймер зваротнага адліку перад пачаткам гульні і выклікае функцыю gameLoop() пасля завяршэння зваротнага адліку. Функцыя gameLoop() - асноўны гульнявы цыкл, які абнаўляе і адлюстроўвае гульнявыя элементы з пэўнай частатай. Выклікаецца пасля завяршэння таймера зваротнага адліку. Функцыя gameLoop() выкарыстоўвае requestAnimationFrame для паўторнага выкліку сябе і абнаўлення стану гульні. Апрацоўшчыкі падзей клавіятуры рэагуюць на націск клавіш і змяняюць напрамак руху змейкі."
         }
       },
       "designProject": {
         "name": "Студыя дызайну інтэр'ера",
         "description": {
-          "a": "Вэрстка выканана ў адпаведнасці з макетам з Figma, а для стылізацыі элементаў выкарыстоўваў SCSS.",
+          "a": "Вёрстку выкананау ў адпаведнасці з макетам з Figma, а для стылізацыі элементаў выкарыстоўваў SCSS.",
           "b": "Стварыў формы для ўводу дадзеных і адпраўкі на сервер.",
-          "c": "Для забеспячэння адаптыўнасці сайта выкарыстоўваў семантычныя тэгі і медыя-запыты.",
-          "d": "Рэалізаваў слайдер для фатаграфій і інфармацыі на JavaScript.",
-          "e": "Пры стварэнні слайдера на JavaScript узніклі складнасці з кіраваннем рухам слайдаў, сінхранізацыяй элементаў і апрацоўкай падзей націскання. Я выкарыстоўваў метады працы з DOM, CSS уласцівасць transform для анімацыі, масівы і цыклы для кіравання элементамі і апрацоўчыкі падзей для навігацыі."
+          "c": "Для забеспячэння адаптаванасці сайта выкарыстоўваў семантычныя тэгі і медыя-запыты.",
+          "d": "Рэалізаваў слайдэр для фотаздымкаў і інфармацыі на JavaScript.",
+          "e": "Пры стварэнні слайдэра на JavaScript узніклі складнасці з кіраваннем рухам слайдаў, сінхранізацыяй элементаў і апрацоўкай падзей націскання. Я выкарыстоўваў метады працы з DOM, CSS уласцівасць transform для анімацыі, масівы і цыклы для кіравання элементамі і апрацоўшчыкі падзей для навігацыі."
         }
       },
       "chart": {
         "name": "Графік (React)",
         "description": {
-          "a": "Функцыянальныя компаненты ў React: Паляпшэнне мадульнасці і чытаемасці кода.",
-          "b": "Семантычныя тэгі ў верстцы: Павышэнне даступнасці сайта і паляпшэнне SEO.",
-          "c": "Інтэграцыя SVG-графікі: Даданне прывабных візуальных элементаў.",
-          "d": "JJavaScript і SVG для інтэрактыўнасці: Паляпшэнне вопыту карыстальніка і функцыянальнасці прыкладання."
+          "a": "Выкарастаны:",
+          "b": "Функцыянальныя компаненты ў React для паляпшэнне мадульнасці і чытаемасці кода.",
+          "c": "Семантычныя тэгі ў верстцы для павышэнне даступнасці сайта і паляпшэнне SEO.",
+          "d": "Інтэграцыя SVG-графікі для даданне прывабных візуальных элементаў.",
+          "e": "JavaScript для інтэрактыўнасці."
         }
       },
       "youTalk": {
         "name": "YouTalk",
         "description": {
           "a": "Пры верстцы праекта выкарыстоўваў макет Figma. Чысты CSS з дадаткам тэхнік, такіх як грыды і флэксбокс.",
-          "b": "Выкарыстанне семантычных тэгаў, такіх як <header>, <nav>, <section>, <article>, <footer>, каб код быў зразумелым і лёгка чытаемым як для распрацоўшчыкаў, так і для пошукавых сістэм.",
-          "c": "Выкарыстанне грыдаў і флэксбокса дазволіла мне стварыць адаптыўную верстку. Выкарыстоўваў псеўдакласы, каб дадаць інтэрактыўныя эфекты.",
-          "d": "У выніку мая верстка адаптавана пад усе прылады і прадастаўляе прыемны і інтуітыўна зразумелы інтэрфейс."
+          "b": "Семантычныя тэгі, такіх як <header>, <nav>, <section>, <article>, <footer>, выкарыстоўваліся для таго, каб код быў зразумелым для распрацоўшчыкаў, і для пошукавых сістэм.",
+          "c": "Адапдаванная верстка стрворана с дапамогай Grid і FlexBox. Выкарыстоўваліся псеўдакласы, каб стварыць інтэрактыўныя эфекты.",
+          "d": "У выніку верстка адаптавана пад усе прылады і ўяўляе прыемны і інтуітыўна зразумелы інтэрфейс."
         }
       },
-        "link": "Спасылка на праект",
+      "link": "Спасылка на праект",
       "sectionLeft": {
         "photo": "Фота",
         "description": "Апісанне"
