--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -36,9 +36,9 @@
           "a": "Использование элемента <canvas> для создания игрового поля.",
           "b": "HTML и CSS для основной структуры и визуального оформления",
           "c": "JavaScript для управления логикой и визуализацией игры.",
-          "d": "Добавление функционала, настройки скорости змейки c помощью JavaScript",
+          "d": "Добавлен функционал для настройки скорости змейки c помощью JavaScript",
           "e": "Использование локального хранилища браузера для сохранения имени игрока и лучшего результата",
-          "f": "Сложность возникла с управлением жизненного цикла игры. Решение было таким. Функция run() отвечает за начало игры. Запускает таймер обратного отсчета перед началом игры и вызывает функцию gameLoop() после завершения обратного отсчета. Функция gameLoop() основной игровой цикл, который обновляет и отображает игровые элементы с определенной частотой. Вызывается после завершения таймера обратного отсчета. Использует requestAnimationFrame для повторного вызова себя и обновления состояния игры. Обработчики событий клавиатуры реагируют на нажатия клавиш и изменяют направление движения змейки."
+          "f": "Сложность возникла с управлением жизненного цикла игры. Решение было таким. Функция run() отвечает за начало игры. Запускает таймер обратного отсчета перед началом игры и вызывает функцию gameLoop() после завершения обратного отсчета. Функция gameLoop() основной игровой цикл, который обновляет и отображает игровые элементы с определенной частотой. gameLoop() использует requestAnimationFrame для повторного вызова себя и обновления состояния игры. Обработчики событий клавиатуры реагируют на нажатия клавиш и изменяют направление движения змейки."
         }
       },
       "designProject": {
