--- a/public/locales/by/translation.json
+++ b/public/locales/by/translation.json
@@ -14,20 +14,20 @@
     "about": {
       "a": "Я вучуся ў SF на курсе 'FrontEnd Pro'.",
       "b": "У вольны час рэалізуем разам з камандай свой праект.",
-      "c": "Захапляюся стварэннем вэб-дададкаЎ з выкарыстаннем JavaScript/TypeScript і React.",
+      "c": "Захапляюся стварэннем вэб-дададкаў з выкарыстаннем JavaScript/TypeScript і React.",
       "d": "Я камунікатыўны, імкнуся да пастаяннага развіцця і адапціруюся да новых тэхналогій.",
-      "e": "Гатоў браць на сябе адказнасць і ўделінічаць у стварэнні праектаў для развіцця кампаній."
+      "e": "Гатоў браць на сябе адказнасць і ўдзельнічаць у стварэнні праектаў для развіцця кампаній."
     },
     "portfolio": {
       "dataTable": {
         "name": "Табліца дадзеных(React)",
         "description": {
           "a": "React і функцыянальныя кампаненты для чыстага і кампактнага кода.",
-          "b": "Вёрстка адпавядае макету і выкарыстаны стандартныя правілы SCSS і styled-components для стылізацыі.",
+          "b": "Вёрстка адпавядае макету, выкарыстаны стандартныя правілы SCSS і styled-components для стылізацыі.",
           "c": "Кастамізацыя элементаў бібліятэкі Ant Design для стварэння зручнага інтэрфейса.",
           "d": "Магчымасць выбару паміж дзённай і начной тэмай праз useContext.",
           "e": "Праца з рознымі тыпамі дадзеных: тэкставымі, лікавымі, выпадальным спісам і чэкбоксамі з адпаведнымі кампанентамі.",
-          "f": "Складнасць заключалася ў рэалізацыі тэм (дзень/ноч). Праблема была вырашана з дапамогай styled-components, useState і useContext."
+          "f": "Складанасць заключалася ў рэалізацыі тэм (дзень/ноч). Праблема была вырашана з дапамогай styled-components, useState і useContext."
         }
       },
       "snake": {
