add Commenting system

--- a/public/locales/by/translation.json
+++ b/public/locales/by/translation.json
@@ -19,6 +19,18 @@
       "e": "Гатоў браць на сябе адказнасць і ўдзельнічаць у стварэнні праектаў для развіцця кампаній."
     },
     "portfolio": {
+      "commentingSystem": {
+        "name": "Сістэма каментароў",
+        "description": {
+          "a": "Дадаў магчымасць дадаваць каментары і адказваць на іх праз форму ўводу з праверкай даўжыні",
+          "b": "Механізм змены рэйтынгу каментароў і адказаў рэалізаваны з дапамогай кнопак 'Лайк' і 'Дізлайк'.",
+          "c": "Дадаў функцыянал дадавання каментароў і адказаў у абранае з можлівасцю адмяны дзеяння.",
+          "d": "Падтрымліваю сартыроўку каментароў па розным параметрам: даты, рэйтынгу, колькасці адказаў.",
+          "e": "Мой код аснованы на TypeScript і ES6-класах, пры гэтым я стрэмлюся дапамагчы сувязі прадпрыемстваў DRY і KISS.",
+          "f": "Для стылізацыі карыстацкага інтэрфейсу выкарыстоўваю SCSS, а для зборкі праекта і кіравання залежнасцямі - Webpack.",
+          "g": "Ужываю метадалогію БЭМ для арганізацыі HTML і CSS кода, забяспечваючы мадульнасць і чытаемасць стыляў і кампанентаў."
+        }
+      },
       "dataTable": {
         "name": "Табліца дадзеных(React)",
         "description": {
