--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,4 +1,4 @@
-{    
+{
   "header": {
     "home": "Главная",
     "about": "Обо мне",
@@ -19,6 +19,19 @@
       "e": "Готов брать на себя ответственность и способствовать развитию проектов и компаний."
     },
     "portfolio": {
+      "commentingSystem": {
+        "name": "Система Комментариев",
+        "description": {
+          "a": "Добавил возможность добавлять комментарии и отвечать на их через форму ввода с валидацией длины",
+          "b": "Механизм изменения рейтинга комментариев и ответов реализован с использованием кнопок 'Like' и 'Dislike'.",
+          "c": "Добавил функционал добавления комментариев и ответов в избранное с возможностью отмены действия.",
+          "d": "Поддерживаю сортировку комментариев по различным параметрам: дате, рейтингу, количеству ответов.",
+          "e": "Мой код основан на TypeScript и ES6-классах, при этом я стремился соблюдать принципы DRY и KISS.",
+          "f": "Для стилизации пользовательского интерфейса использую SCSS, а для сборки проекта и управления зависимостями - Webpack.",
+          "g": "Применяю методологию БЭМ для организации HTML и CSS кода, обеспечивая модульность и читаемость стилей и компонентов."
+        
+        }
+      },
       "dataTable": {
         "name": "Таблица данных(React)",
         "description": {
